--- a/css/stylePage.css
+++ b/css/stylePage.css
@@ -64,7 +64,7 @@ ul h4 {
 #content {
     background-color: #26333D;
     padding: 40px;
-    margin-top: 90px;
+    margin-top: 70px;
 }
 
 #fixedImg{
@@ -95,7 +95,7 @@ ul h4 {
     left: 0;
     top: 0;
     position: fixed;
-    padding: 20px 1.5%;
+    padding: 10px 1.5%;
     height: 50px;
     background-color: #090C0E;
 }
@@ -116,7 +116,7 @@ ul h4 {
 }
 
 #logo h1 {
-    font-size: 3.5em;
+    font-size: 2.5em;
     font-family: Oswald, sans-serif;
     text-shadow: 0px 2px 2px #0C1114;
     margin: 0 0 0.25em 0;
@@ -124,6 +124,7 @@ ul h4 {
 
 #logo h2 {
     margin: 0;
+    margin-top: -5px;
     padding: 0;
     white-space: nowrap;
     font-size: 1.0em;
@@ -243,12 +244,17 @@ ul h4 {
     width: 100%;
 }
 
+#footer a{
+    text-decoration: none;
+}
+
 #price {
     width: 80%;
     margin-left: 10%;
     border-spacing: 10px 5px;
     text-align: center;
 }
+
 
 #price th{
     color: deepskyblue;
